syntax = "proto2";

package tasks;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/tasks/config";

////////////////////////////////////////////////////////////////////////////////

message TasksConfig {
    optional string PollForTaskUpdatesPeriod = 1 [default = "1s"];
    optional string PollForTasksPeriodMin = 2 [default = "1s"];
    optional string PollForTasksPeriodMax = 3 [default = "10s"];
    optional string PollForStallingTasksPeriodMin = 4 [default = "1s"];
    optional string PollForStallingTasksPeriodMax = 5 [default = "20s"];
    optional string TaskPingPeriod = 6 [default = "2s"];
    optional string TaskStallingTimeout = 7 [default = "10s"];
    optional string TaskWaitingTimeout = 8 [default = "10s"];
    optional string ScheduleRegularTasksPeriodMin = 9 [default = "2s"];
    optional string ScheduleRegularTasksPeriodMax = 10 [default = "4s"];
    optional uint64 RunnersCount = 11 [default = 200];
    optional uint64 StalkingRunnersCount = 12 [default = 200];
    optional string StorageFolder = 13 [default = "tasks"];
    optional string EndedTaskExpirationTimeout = 14 [default = "48h"];
    optional string ClearEndedTasksTaskScheduleInterval = 15 [default = "1m"];
    optional uint64 ClearEndedTasksLimit = 16 [default = 100000];
    optional bool DisableEndedTasksClearing = 17;
    optional string LegacyStorageFolder = 18;
    optional uint64 MaxRetriableErrorCount = 19 [default = 100];
    optional string HangingTaskTimeout = 20 [default = "1h"];

    // Task type whitelist to be executed on current DM instance.
    // If empty, then works with all task types.
    repeated string TaskTypeWhitelist = 21;

    // Task type blacklist that shouldn't be executed on current DM instance.
    repeated string TaskTypeBlacklist = 22;

    // Zone of current DM instance.
    optional string ZoneId = 23;
}
